--- a/data/calendar.metainfo.xml.in
+++ b/data/calendar.metainfo.xml.in
@@ -55,6 +55,20 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.0" date="2024-05-14" urgency="medium">
+      <description>
+        <p>Minor Updates:</p>
+        <ul>
+          <li>New flatter design</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+      <issues>
+        <issue url="https://github.com/elementary/calendar/issues/590">iCal (On The Web) support</issue>
+        <issue url="https://github.com/elementary/calendar/issues/745">Please add a function to subscribe a online ICS calender stream</issue>
+      </issues>
+    </release>
+
     <release version="7.0.0" date="2023-07-24" urgency="medium">
       <description>
         <p>Minor Updates:</p>
