--- a/meson.build
+++ b/meson.build
@@ -70,4 +70,7 @@ subdir('src')
 subdir('plugins')
 subdir('po')
 
-gnome.post_install(glib_compile_schemas: true)
+gnome.post_install(
+    glib_compile_schemas: true,
+    gtk_update_icon_cache: true
+)
