--- a/data/calendar.metainfo.xml.in
+++ b/data/calendar.metainfo.xml.in
@@ -55,6 +55,16 @@
   <update_contact>contact_at_elementary.io</update_contact>
 
   <releases>
+    <release version="8.0.1" date="2025-10-29" urgency="medium">
+      <description>
+        <p>Minor Updates:</p>
+        <ul>
+          <li>Improve screen reader support</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
+
     <release version="8.0.0" date="2024-07-25" urgency="medium">
       <description>
         <p>Minor Updates:</p>
