Fix extra semicolons

--- a/data/meson.build
+++ b/data/meson.build
@@ -50,7 +50,7 @@ i18n.merge_file(
 i18n.merge_file(
     input: 'calendar.metainfo.xml.in',
     output: meson.project_name() + '.metainfo.xml',
-    po_dir: meson.source_root() / 'po' / 'extra',
+    po_dir: meson.project_source_root() / 'po' / 'extra',
     type: 'xml',
     install: true,
     install_dir: get_option('datadir') / 'metainfo',
