--- a/io.elementary.calendar.yml
+++ b/io.elementary.calendar.yml
@@ -16,7 +16,7 @@ finish-args:
   - --talk-name=org.gnome.evolution.dataserver.Sources5
   - --talk-name=org.gnome.evolution.dataserver.Subprocess.Backend.*
 
-  - --talk-name=org.elementary.Contractor
+  - --talk-name=io.elementary.Contractor
   - --talk-name=org.freedesktop.Notifications
   - --system-talk-name=org.freedesktop.GeoClue2
   - --system-talk-name=org.freedesktop.login1
